--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -14,6 +14,8 @@
     </div>
     <script src="scripts/model.js"></script>
     <script src="scripts/controller.js"></script>
+    <script src="scripts/jugador.js"></script>
+    <script src="scripts/temporizador.js"></script>
 
 </body>
 
