--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -14,6 +14,7 @@
     </div>
     <script src="scripts/model.js"></script>
     <script src="scripts/controller.js"></script>
+    <script src="scripts/axios.min.js"></script>
 
 </body>
 
