--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -12,9 +12,9 @@
     <div id="root">
         <p id="respuesta"></p>
     </div>
-
     <script src="scripts/model.js"></script>
     <script src="scripts/controller.js"></script>
+    <script src="scripts/axios.min.js"></script>
 
 </body>
 
