--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -15,6 +15,9 @@
 
     <script src="scripts/model.js"></script>
     <script src="scripts/controller.js"></script>
+    <script src="scripts/jugador.js"></script>
+    <script src="scripts/temporizador.js"></script>
+    <script src="scripts/axios.min.js"></script>
 
 </body>
 
