--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -10,12 +10,13 @@
 <body>
 
     <div id="root">
-        <p id="respuesta"></p>
+        <p id="frase"></p>
+        <p id="frase_traducida"></p>
+        <p id="idioma_traducido"></p>
+        <p id="codigo_idioma_correcto"></p>
     </div>
-
     <script src="scripts/model.js"></script>
     <script src="scripts/controller.js"></script>
-    <script src="scripts/jugador.js"></script>
     <script src="scripts/temporizador.js"></script>
     <script src="scripts/axios.min.js"></script>
 
