--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -15,10 +15,14 @@
         <p id="idioma_traducido"></p>
         <p id="codigo_idioma_correcto"></p>
     </div>
+    <script src="scripts/cuentaatras.js"></script>
+    <script src="scripts/jugador.js"></script>
     <script src="scripts/model.js"></script>
     <script src="scripts/controller.js"></script>
-    <script src="scripts/temporizador.js"></script>
     <script src="scripts/axios.min.js"></script>
+
+
+
 
 </body>
 
