--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -14,6 +14,7 @@
         <p id="frase_traducida"></p>
         <p id="idioma_traducido"></p>
         <p id="codigo_idioma_correcto"></p>
+        <p id="id_idioma_correcto"></p>
         <p id="array_idioma"></p>
         <button id="Boton 1"></button>
         <button id="Boton 2"></button>
