creadas cuatro opciones randomizadas con la frase

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -16,6 +16,9 @@
         <p id="codigo_idioma_correcto"></p>
         <p id="id_idioma_correcto"></p>
         <p id="array_idioma"></p>
+        <p id="nombre_idiomaextra0"></p>
+        <p id="nombre_idiomaextra1"></p>
+        <p id="nombre_idiomaextra2"></p>
         <button id="Boton 1"></button>
         <button id="Boton 2"></button>
         <button id="Boton 3"></button>
