--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -10,20 +10,21 @@
 <body>
 
     <div id="root">
-        <p id="frase"></p>
+        <p id="frase" hidden></p>
         <p id="frase_traducida"></p>
-        <p id="idioma_traducido"></p>
-        <p id="codigo_idioma_correcto"></p>
-        <p id="id_idioma_correcto"></p>
-        <p id="array_idioma"></p>
-        <p id="nombre_idiomaextra0"></p>
-        <p id="nombre_idiomaextra1"></p>
-        <p id="nombre_idiomaextra2"></p>
+        <p id="idioma_traducido" hidden></p>
+        <p id="codigo_idioma_correcto" hidden></p>
+        <p id="id_idioma_correcto" hidden></p>
+        <p id="array_idioma" hidden></p>
+        <p id="nombre_idiomaextra0" hidden></p>
+        <p id="nombre_idiomaextra1" hidden></p>
+        <p id="nombre_idiomaextra2" hidden></p>
         <button id="Boton 1"></button>
         <button id="Boton 2"></button>
         <button id="Boton 3"></button>
         <button id="Boton 4"></button>
     </div>
+    <p>juego.model.randomizarFrase()</p>
     <script src="scripts/cuentaatras.js"></script>
     <script src="scripts/jugador.js"></script>
     <script src="scripts/model.js"></script>
