--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -10,7 +10,6 @@
 <body>
 
     <div id="root">
-        <p id="frase" hidden></p>
         <p id="frase_traducida"></p>
         <p id="idioma_traducido" hidden></p>
         <p id="codigo_idioma_correcto" hidden></p>
@@ -27,6 +26,7 @@
     <p>juego.model.randomizarFrase()</p>
     <script src="scripts/cuentaatras.js"></script>
     <script src="scripts/jugador.js"></script>
+    <script src="scripts/turno.js"></script>
     <script src="scripts/model.js"></script>
     <script src="scripts/controller.js"></script>
     <script src="scripts/axios.min.js"></script>
