--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -10,14 +10,22 @@
 <body>
 
     <div id="root">
-        <p id="respuesta"></p>
+        <p id="frase_traducida"></p>
+        <button id="Boton 1"></button>
+        <button id="Boton 2"></button>
+        <button id="Boton 3"></button>
+        <button id="Boton 4"></button>
     </div>
-
+    <p>juego.model.randomizarFrase()</p>
+    <script src="scripts/cuentaatras.js"></script>
+    <script src="scripts/jugador.js"></script>
+    <script src="scripts/turno.js"></script>
     <script src="scripts/model.js"></script>
     <script src="scripts/controller.js"></script>
-    <script src="scripts/jugador.js"></script>
-    <script src="scripts/temporizador.js"></script>
     <script src="scripts/axios.min.js"></script>
+
+
+
 
 </body>
 
