--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -15,7 +15,10 @@
         <button id="Boton 2"></button>
         <button id="Boton 3"></button>
         <button id="Boton 4"></button>
+        <br>
+
     </div>
+    <p id="puntuacion">0</p>
     <p>juego.model.randomizarFrase()</p>
     <script src="scripts/cuentaatras.js"></script>
     <script src="scripts/jugador.js"></script>
