--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -18,7 +18,8 @@
         <br>
 
     </div>
-    <p id="puntuacion">0</p>
+    <p id="puntuacion">aqui la puntuacion</p>
+    <p id="display_tiempo">60:000</p>
     <p>juego.model.randomizarFrase()</p>
     <script src="scripts/cuentaatras.js"></script>
     <script src="scripts/jugador.js"></script>
