conseguido que los eventos se cancelen

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -20,7 +20,7 @@
     </div>
     <p id="puntuacion">aqui la puntuacion</p>
     <p id="display_tiempo">60:000</p>
-    <p>juego.model.randomizarFrase()</p>
+    <p>juego.model.iniciarJuego()</p>
     <script src="scripts/cuentaatras.js"></script>
     <script src="scripts/jugador.js"></script>
     <script src="scripts/turno.js"></script>
