se insertan correctamente las puntuaciones

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -18,6 +18,7 @@
         <br>
 
     </div>
+    <p id="nombre_jugador">aqui el nombre de jugador</p>
     <p id="puntuacion">aqui la puntuacion</p>
     <p id="display_tiempo">60:000</p>
     <p>juego.model.iniciarJuego()</p>
