--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -28,6 +28,9 @@
             <p id="display_tiempo">60:000</p>
         </div>
         <div id="instrucciones"> Tienes 60 segundos para adivinar en que idioma esta escrita cada frase ¡Buena suerte!</div>
+        <div id="puntuaciones">
+            <p id="tabla_records"> </p>
+        </div>
     </div>
     <script src="scripts/cuentaatras.js"></script>
     <script src="scripts/jugador.js"></script>
