--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -10,17 +10,33 @@
 <body>
 
     <div id="root">
-        <p id="frase_traducida"></p>
-        <button id="Boton 1"></button>
-        <button id="Boton 2"></button>
-        <button id="Boton 3"></button>
-        <button id="Boton 4"></button>
+        <div id="pantalla_titulo">
+            <h1 id="titulo">IDIOMANIA</h1>
+        </div>
+        <div id="pantalla_juego" hidden>
+            <p id="frase_traducida"></p>
+            <button id="Boton 1"></button>
+            <button id="Boton 2"></button>
+            <button id="Boton 3"></button>
+            <button id="Boton 4"></button>
+        </div>
+        <br>
+
+        <div id="pantalla_datos" hidden>
+            <p id="nombre_jugador">aqui el nombre de jugador</p>
+            <p id="puntuacion">aqui la puntuacion</p>
+            <p id="display_tiempo">60:000</p>
+        </div>
+        <div id="instrucciones"> Tienes 60 segundos para adivinar en que idioma esta escrita cada frase. Buena suerte!<br> Pista: Si el idioma se repite, no es el correcto</div>
+        <div id="puntuaciones">
+            <p id="tabla_records"> </p>
+        </div>
     </div>
-    <p>juego.model.randomizarFrase()</p>
     <script src="scripts/cuentaatras.js"></script>
     <script src="scripts/jugador.js"></script>
     <script src="scripts/turno.js"></script>
     <script src="scripts/model.js"></script>
+    <script src="scripts/view.js"></script>
     <script src="scripts/controller.js"></script>
     <script src="scripts/axios.min.js"></script>
 
