--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -27,7 +27,7 @@
             <p id="puntuacion">aqui la puntuacion</p>
             <p id="display_tiempo">60:000</p>
         </div>
-        <div id="instrucciones"> Tienes 60 segundos para adivinar en que idioma esta escrita cada frase. Buena suerte!<br> Pista: Si el idioma se repite, no es el correcto</div>
+        <div id="instrucciones"> Tienes 60 segundos para adivinar en que idioma esta escrita cada frase. Al acertar ganaras un poco de tiempo. Buena suerte!</div>
         <div id="puntuaciones">
             <p id="tabla_records"> </p>
         </div>
